# eeva

./: .gitignore  admin.ipynb  analyzer_dev.ipynb  cloudbuild.yaml  conversation.py  couples_test.ipynb  dev_template.ipynb  interview.py  justfile  pyproject.toml  site_test.ipynb  test.ipynb  update  utils.py
.github/workflows/: cd.yml
config/: debug.yaml  default.yaml  example.yaml  sadfdfge.yaml
config/hydra/job_logging/: custom.yaml
data/: .gitignore  db.sqlite
data/prompts/: default_system_message.txt  default_user_message.txt
data/question_sets/: default_exclude.txt
data/user_sets/: default_exclude.txt
docker/: backend.dockerfile  compose.yaml  frontend.dockerfile
interview-frontend/: package-lock.json  package.json  svelte.config.js
interview-frontend/messages/: da.json
interview-frontend/project.inlang/: project_id  settings.json
interview-frontend/src/: app.css  app.html  global.d.ts  hooks.server.ts  hooks.ts
interview-frontend/src/lib/: ChatFrame.svelte  ChatInput.svelte  ChatMessageContainer.svelte  FormQuestion.svelte  MessageBubble.svelte  base.ts
interview-frontend/src/lib/ui/: Header2.svelte  InputText.svelte  InputTextMultiline.svelte  Markdown.svelte  P.svelte  PSmall.svelte  Subtitle.svelte  SuccessButton.svelte  Title.svelte
interview-frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
interview-frontend/src/routes/[...interviewerPromptId]/: +page.server.ts  +page.svelte
interview-frontend/src/routes/api/[...api_slug]/: +server.ts
interview-frontend/src/routes/api/prompt/: +server.ts
interview-frontend/src/routes/api/save_conversation/: +server.ts
interview-frontend/src/routes/form/: +layout.svelte  +page.svelte
interview-frontend/src/routes/form-response/[formResponseId]/: +page.server.ts  +page.svelte
interview-frontend/src/routes/form-responses/[formResponseId]/: +layout.svelte  +page.server.ts  +page.svelte
interview-frontend/src/routes/form/[formId]/: +page.server.ts  +page.svelte
interview-frontend/src/routes/interview/: +page.server.ts
interview-frontend/src/routes/interviews/: +page.server.ts
prompts/default/: freudian-analyst-system.txt  hermione-basic.txt  life-story-interviewer.txt  on-your-mind.txt  unhingedness-analyst-instruction.txt
python/: pyproject.toml  test.ipynb  utils.py
python/eeva/: __init__.py  __main__.py  analyzer.py  app.py  form.py  form_response.py  interview.py  main.py  models.py  prompt.py  question.py  simulation.py  utils.py
python/eeva/experiment/: __main__.py  analysis.py  analyzer.py  analyzer_agent.py  fetch_data.py  run.py  stats.py  types.py
python/eeva/server/: analyzer.py  database.py  form.py  form_response.py  form_responses.py  forms.py  interview.py  interviews.py  logging_config.py  prompt.py  prompts.py  question.py  questions.py  server.py
python/identity/: __init__.py  interview.py  main.py  simulation.py  utils.py
python/identity/server/: server.py
(+14 files in other folders)
