[project]
name = "eeva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "langgraph>=0.4.0",
    "pydantic>=2.11.3",
    "sse-starlette>=2.3.6",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "types-requests>=2.32.0.20250515",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
ignore = ["D203", "D213", "F722"]
select = ["I", "E", "F", "W", "N", "B"]
isort.known-first-party = ["eeva"]
